      editing input fields with i_<C-i>. See :h 'editor'. [b4]
    • Mapping changes:
      - It's now possible to map keys in many more modes, including
        Hint, Multi-line Output, and Menu. [b4]
      - Added site-specific mapping groups and related command
        changes. [b6]
      - Added 'timeout' and 'timeoutlen' options. [b6]
      - Added <A-m>l and <A-m>s to aid in the construction of
        macros. [b6]
      - Removed the implicit page load delays during macro playback. [b6]
      - Added the base modes Base, Main, and Command which other
        modes inherit key bindings from. [b6]
    • Command changes:
      - :viusage, :optionusage and :exusage were replaced with :listkeys,
        :listoptions and :listcommands, providing more powerful and
        consistent interactive help facility (improvements include
        listing keys for modes other than Normal, filtering the output,
        and linking to source code locations). [b4]
      - :downloads now opens a download list in the multi-line output
        buffer. [b6]
      - :extensions has been replaced with a more powerful :addons. [b6]
      - :javascript! now opens a Read Eval Print Loop. [b6]
      - Added -arg flag to :map. [b6]
      - Added -literal flag to :command. [b6]
      - Added :completions command. [b6]
      - Added :cookies command. [b3]
      - :extadd now supports remote URLs as well as local files on Firefox 4. [b2]
      - Added :if/:elseif/:else/:endif conditionals. [b3]
      - Added -charset and -post to :bmark. [b5]
      - Added -keyword, -tags, -title to :delbmarks. [b2]
      - Added :extrehash, :exttoggle, :extupdate, and :rehash commands. [b5]
      - :abclear, :comclear and :mapclear have been substituted by a bang now
        accepted by :unabbreviate, :delcommand and :unmap, respectively. [b6]
      - Added :feedkeys command. [b4]
      - Added -sort option to :history. [b4]
      - Added several new options, including -javascript, to :abbreviate and