@@ -20,24 +20,35 @@ want to bypass &dactyl.appName;'s key handling and pass keys directly to
 &dactyl.host; or to a web page, you have two options:
 
 <item>
-    <tags><![CDATA[pass-through <pass-all-keys> <C-z> CTRL-Z]]></tags>
-    <spec>&lt;C-z></spec>
+    <tags><![CDATA[<A-b>]]></tags>
+    <spec><![CDATA[<A-b>]]></spec>
     <description>
         <p>
-            Pass all keys except for <k name="Esc"/> directly to
-            &dactyl.host;. When <k name="Esc"/> is pressed,
-            resume normal key handling. This is especially useful
-            for web sites which make heavy use of key bindings.
+            Process the next key as a builtin mapping, ignoring any user defined
+            mappings and <o>passkeys</o> settings.
         </p>
     </description>
 </item>
 
 <item>
     <tags><![CDATA[send-key <pass-next-key> <C-v> CTRL-V]]></tags>
-    <spec>&lt;C-v></spec>
+    <spec><![CDATA[<C-v>]]></spec>
     <description>
         <p>
             Pass the next key press directly to &dactyl.host;.
+        </p>
+    </description>
+</item>
+
+<item>
+    <tags><![CDATA[pass-through <pass-all-keys> <C-z> CTRL-Z]]></tags>
+    <spec><![CDATA[<C-z>]]></spec>
+    <description>
+        <p>
+            Pass all keys except for <k name="Esc"/> directly to
+            &dactyl.host;. When <k name="Esc"/> is pressed,
+            resume normal key handling. This is especially useful
+            for web sites which make heavy use of key bindings.
         </p>
     </description>
 </item>
